# c-demo-project

./: .gitignore  01.hello  03.hello  CMakeLists.txt  README.md
1-type-io/: 01.circle.c  02.sphere.c  03.mol.c  04.admin.c
c/day01/: 001.c  01.hello.c  03.c  04.c  day01.md
c/day02/: 01.const.c  04.flot.double.c  05.char.c  day02_vs调试.md  day02_数据类型.md  day02_输入和输出.md  dbg.c  demo..c  freezing_point.c  scanf_unc.c
c/day03/: 02.type_convert.c  03.bool.c  1.erl
c_plus/: oop.cpp
c_plus/day01/: 01.hello.cpp  02.hello.cpp  02.namespace.cpp  03.hello.cpp  04.namespace.cpp  05.C_Module.cpp  06.const_variable.cpp  externA.c
c_plus/day02/: input.cpp
c_plus/func/: func_01.cpp  func_02.cpp  func_03_array_arg.cpp  func_04_overload.cpp
c_plus/oop/: demo01_human.cpp  demo02_circle.cpp  demo03_Student.cpp  demo04_maker.cpp  demo05.cpp  demo06_person.cpp  demo07.cpp  demo0_cub.cpp  main_test.asm
c_plus/oop2/: demo01.cpp  demo02.cpp  screen.cpp
day01/: 01.cpp  02.cpp  03.c
day02/: 02.int.c  03.char.c  04.flot.double.c
day03/: 01.string.c
